# Django5_Blog

./: .gitignore  PyWhatKit_DB.txt  README.md  db.sqlite3  pyproject.toml  requirements.txt
blog/: admin.py  context_processors.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_initial.py  0003_alter_post_options_alter_post_data_update_and_more.py  0004_alter_post_data_update_alter_post_date_create.py  0005_alter_post_data_update_alter_post_date_create.py  0006_post_publish.py  0007_post_image.py
blog/models/: __init__.py  post_model.py
blog/views/: __init__.py  post_detail_view.py  post_list_view.py  post_list_view_custom_users.py
core/: settings.py  urls.py
discontcard/: admin.py  apps.py  models.py  urls.py  views.py
discontcard/migrations/: 0001_initial.py
static_dev/css/: stylesheet.css  stylesheet1.css  stylesheets1.css
templates/: base.html
templates/blog/: index.html  single_post.html
templates/discontcard/: index.html
templates/includes/: done.html  dropdown_menu_proff_union.html  dropdown_menu_users_account.html  footer.html  header.html  message_done.html  paginator.html
templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
templates/users/: active.html  addpost.html  confirm_email.html  deletepost.html  email_confirmed.html  index.html  invalid_verify.html  (+6 more)
users/: admin.py  forms.py  mixins.py  token.py  urls.py  utils.py  views.py
(+23 files in other folders)
